[package]
name = "wasm-metadata"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasm-metadata"
description = "Read and manipulate WebAssembly metadata"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true, optional = true }
anyhow = { workspace = true }
wasmparser = { workspace = true, features = ['component-model', 'hash-collections'] }
wasm-encoder = { workspace = true, features = ['component-model'] }
indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { version = "1" }
spdx = "0.10.1"
