[package]
name = "wasm-mutate-stats"
edition.workspace = true
publish = false
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arbitrary = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
wasm-mutate = { workspace = true }
wasmprinter = { workspace = true }
wasmparser = { workspace = true, features = ['validate'] }
wasmtime = { workspace = true }
env_logger = { workspace = true }
itertools = "0.13.0"
clap = { workspace = true }
log = { workspace = true }

[lib]
doctest = false
test = false
