[package]
name = "wasm-mutate-stats"
edition.workspace = true
publish = false
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arbitrary = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
itertools = "0.14.0"
log = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
wasm-mutate = { workspace = true }
wasmparser = { workspace = true, features = ['std', 'validate'] }
wasmprinter = { workspace = true }
wasmtime = { workspace = true }

[lib]
doctest = false
test = false
