[package]
name = "wasm-mutate"
version = "0.2.38"
edition.workspace = true
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasm-mutate"
description = "A WebAssembly test case mutator"

[dependencies]
clap = { workspace = true, optional = true }
thiserror = "1.0.28"
wasmparser = { workspace = true }
wasm-encoder = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
egg = "0.6.0"

[dev-dependencies]
anyhow = { workspace = true }
wat = { path = "../wat" }
wasmprinter = { path = "../wasmprinter" }
env_logger = { workspace = true }
