[package]
name = "wasm-mutate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasm-mutate"
description = "A WebAssembly test case mutator"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true, optional = true }
thiserror = "1.0.28"
wasmparser = { workspace = true }
wasm-encoder = { workspace = true, features = ["wasmparser"] }
rand = { workspace = true }
log = { workspace = true }
egg = "0.6.0"

[dev-dependencies]
anyhow = { workspace = true }
wat = { path = "../wat" }
wasmprinter = { path = "../wasmprinter" }
env_logger = { workspace = true }
wasmparser = { workspace = true, features = ['validate', 'features'] }
