[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["command-line-utilities", "development-tools", "development-tools::testing", "wasm"]
description = "A WebAssembly test case shrinker"
edition.workspace = true
keywords = ["reducer", "reduce", "bug", "crash"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "./README.md"
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasm-shrink"
name = "wasm-shrink"
version = "0.1.39"

[dependencies]
anyhow = { workspace = true }
blake3 = "1.2.0"
log = { workspace = true }
rand = { workspace = true }
clap = { workspace = true, optional = true }
wasm-mutate = { workspace = true }
wasmparser = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
wasmprinter = { path = "../wasmprinter" }
wat = { path = "../wat" }
