[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["command-line-utilities", "development-tools", "development-tools::testing", "wasm"]
description = "A WebAssembly test case shrinker"
edition.workspace = true
keywords = ["reducer", "reduce", "bug", "crash"]
license.workspace = true
readme = "./README.md"
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasm-shrink"
name = "wasm-shrink"
version.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
blake3 = "1.2.0"
log = { workspace = true }
rand = { workspace = true }
clap = { workspace = true, optional = true }
wasm-mutate = { workspace = true }
wasmparser = { workspace = true, features = ['validate'] }

[dev-dependencies]
env_logger = { workspace = true }
wasmprinter = { path = "../wasmprinter" }
wat = { path = "../wat" }
