[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["command-line-utilities", "development-tools", "development-tools::testing", "wasm"]
description = "A WebAssembly test case generator"
documentation = "https://docs.rs/wasm-smith"
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception"
name = "wasm-smith"
readme = "./README.md"
repository = "https://github.com/bytecodealliance/wasm-tools"
version = "0.4.4"

[[bin]]
name = "wasm-smith"
path = "src/bin/wasm-smith.rs"
required-features = ["structopt"]

[[bench]]
name = "corpus"
harness = false

[dependencies]
arbitrary = { version = "1.0.0", features = ["derive"] }
leb128 = "0.2.4"
structopt = { version = "0.3.16", optional = true }
wasm-encoder = { version = "0.4.1", path = "../wasm-encoder" }
indexmap = "1.6"

[dev-dependencies]
criterion = "0.3.3"
libfuzzer-sys = "0.4.0"
rand = { version = "0.7.3", features = ["small_rng"] }
wasmparser = { path = "../wasmparser" }
wasmprinter = { path = "../wasmprinter" }
