[package]
name = "wasm-wave"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors = ["lann.martin@fermyon.com"]
description = "WebAssembly Value Encoding"
documentation = "https://docs.rs/wasm-wave"
categories = ["wasm", "encoding", "parser-implementations"]
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasm-wave"
readme = "README.md"

[lints]
workspace = true

[features]
default = ["std", "wit"]
std = []
wit = ["dep:wit-parser", "std"]

[dependencies]
logos = { version = "0.14.2", features = ["forbid_unsafe"] }
thiserror = { workspace = true, default-features = false }
wit-parser = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
