[package]
name = "wasmemit"
version = "0.1.0"
authors = ["Yury Delendik <ydelendik@mozilla.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
wasmparser = { path = "../wasmparser" }
wast = { path = "../wast" }

[dev-dependencies]
anyhow = "1.0"
tempfile = "3.1"
diff = "0.1"
wasmprinter = { path = '../wasmprinter' }
