[package]
name = "wasmprinter"
version = "0.2.70"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition.workspace = true
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasmprinter"
homepage = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasmprinter"
documentation = "https://docs.rs/wasmprinter"
description = """
Rust converter from the WebAssembly binary format to the text format.
"""

[dependencies]
anyhow = { workspace = true }
wasmparser = { workspace = true }

[dev-dependencies]
diff = "0.1"
rayon = { workspace = true }
tempfile = "3.0"
wat = { path = "../wat" }
wast = { path = "../wast" }
