[package]
name = "wat"
version = "1.209.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition.workspace = true
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wat"
homepage = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wat"
documentation = "https://docs.rs/wat"
description = """
Rust parser for the WebAssembly Text format, WAT
"""
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
wast = { workspace = true }
