[package]
name = "wat"
version = "1.244.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition.workspace = true
license.workspace = true
readme = "README.md"
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wat"
homepage = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wat"
documentation = "https://docs.rs/wat"
description = """
Rust parser for the WebAssembly Text format, WAT
"""
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
wast = { workspace = true, features = ['wasm-module'] }

[features]
default = ['component-model']

# Off-by-default feature to support emitting DWARF debugging information in
# parsed binaries pointing back to source locations in the original `*.wat`
# source.
dwarf = ['wast/dwarf']

# On-by-default feature to support parsing the component model text format.
component-model = ['wast/component-model']
