[package]
name = "wit-component"
authors = ["Peter Huene <peter@huene.dev>"]
version = "0.3.2"
edition.workspace = true
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wit-component"
homepage = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wit-component"
documentation = "https://docs.rs/wit-component"
description = """
Tooling for working with `*.wit` and component files together.
"""

[dependencies]
wasmparser = { workspace = true }
wasm-encoder = { workspace = true }
wit-parser = { workspace = true }
anyhow = { workspace = true }
log = "0.4.17"
bitflags = "1.3.2"
indexmap = { workspace = true }

[dev-dependencies]
wasmprinter = { workspace = true }
glob = "0.3.0"
pretty_assertions = "1.3.0"
env_logger = { workspace = true }
wat = { workspace = true }
