[package]
name = "wit-deps"
version = "0.1.0"
edition.workspace = true
authors = ["Roman Volosatovs <rvolosatovs@riseup.net>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wit-deps"
homepage = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wit-deps"
description = "A library for WIT dependency management"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
async-compression = { workspace = true, features = ["futures-io", "gzip"] }
async-tar = { workspace = true }
async-trait = { workspace = true }
directories = { workspace = true }
futures = { workspace = true, features = ["async-await", "std"] }
hex = { workspace = true, features = ["alloc"] }
reqwest = { workspace = true, features = ["rustls-tls", "stream"] }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tokio-stream = { workspace = true, features = ["fs"] }
tokio-util = { workspace = true, features = ["compat"] }
toml = { workspace = true, features = ["display", "parse", "preserve_order"] }
tracing = { workspace = true, features = ["attributes"] }
url = { workspace = true, features = ["serde"] }

[target.'cfg(windows)'.dependencies]
# Required for https://github.com/dignifiedquire/async-tar/pull/35
async-std = { workspace = true, features = ["unstable"] }
