[package]
name = "wit-dylib"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wit-dylib"
homepage = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wit-dylib"
documentation = "https://docs.rs/wit-dylib"
description = """
Generate an dynamic wasm library from a WIT world.
"""
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
wit-parser = { workspace = true }
wasm-encoder = { workspace = true }
indexmap = { workspace = true }
clap = { workspace = true, optional = true }
anyhow = { workspace = true }

[dev-dependencies]
artifacts = { path = './test-programs/artifacts' }
libtest-mimic = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }
wit-smith = { workspace = true }
arbitrary = { workspace = true }
arbtest = "0.3.2"
indexmap = { workspace = true }
wit-component = { workspace = true }
env_logger = { workspace = true }
wasmparser = { workspace = true }

[lib]
test = false
doctest = false

[[test]]
name = 'all'
harness = false
